fix error for mediator Assignment